--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: "npm"
-      # Workaround npm optional deps bug with Rollup on Node 22: use `npm install` instead of `npm ci`
-      - if: ${{ matrix.node == 22 }}
-        run: npm install --include=optional --no-audit --no-fund
-      - if: ${{ matrix.node != 22 }}
-        run: npm ci
+      - run: npm install --include=optional --no-audit --no-fund
       - run: npm run typecheck
       - run: npm run lint
       - run: npm run test
