--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profanitybuster",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "High-performance, TypeScript profanity detection and filtering library with modular language packs.",
   "keywords": [
     "profanity",
